Scroll Animations On Mobile Fix #3.

--- a/style.css
+++ b/style.css
@@ -865,6 +865,48 @@ footer {
         width: auto;
         height: auto;
     }
+
+    .hidden {
+        opacity: 1;
+        transform: translateX(0);
+        transition: all 0s;
+    }
+    
+    .hidden:nth-child(1) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(2) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(3) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(4) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(5) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(6) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(7) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(8) {
+        transition-delay: 0ms;
+    }
+    
+    .hidden:nth-child(9) {
+        transition-delay: 0ms;
+    }
 }
 
 @media (max-width: 599px) {
